[package]
name = "rafters"
description = "Implementation of raft consensus"
repository = "https://github.com/cberner/rafters"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.0.0"
edition = "2021"
authors = ["Christopher Berner <christopherberner@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
